# SnapStash

./: .gitignore  README.md
ios/GZSnapchatMobile/: NotificationServiceExtension.swift
ios/GZSnapchatMobile/NotificationServiceExtension/: Info.plist  NotificationService.swift  NotificationServiceExtension.entitlements
webapp/: .env.example  docker-compose.extracted.yml  docker-compose.test.yml  docker-compose.yml  test_auth.py
webapp/backend/: Dockerfile  conversation_pb2.py  pyproject.toml
webapp/backend/app/: config.py  database.py  init_db.py  main.py  models.py  schemas.py
webapp/backend/app/api/: conversations.py  devices.py  health.py  ingest.py  media.py  messages.py  scheduler.py  search.py  settings.py  stats.py  test.py  users.py
webapp/backend/app/middleware/: __init__.py  auth.py
webapp/backend/app/parsers/: __init__.py  _conversation_parser.py  _data_linker.py  _friends_loader.py  _media_scanner.py  _message_extractor.py  _protobuf_parser.py  snapchat_unified.py
webapp/backend/app/services/: __init__.py  apns_service.py  data_processor.py  ingest_loop.py  ingestion_service.py  local_extractor.py  media_discovery.py  notification_service.py  settings_service.py  ssh_pull.py  storage.py
webapp/backend/app/utils/: db_utils.py
webapp/backend/migrations/versions/: 0b3a63387df4_add_group_chat_support_and_participants.py  add_app_settings_table.py  add_push_device_tokens.py  c04ba21ff190_initial_migration_create_all_tables.py
webapp/frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
(+41 files in other folders)
